# sudoku-cli

./: .gitignore  Cargo.toml  README.md
puzzles/: 1mil  34  50k  65k  easy  hard  hard2
src/: main.rs
src/sudoku/: bitwise.rs  board.rs  data.rs  mod.rs  square.rs
