[package]
name = "sudoku-cli"
version = "0.1.4"
authors = ["ObliqueMotion <aeketn@gmail.com>"]
edition = "2018"
readme = "README.md"
license = "MIT"
documentation = "https://docs.rs/sudoku-cli"
description = "A command-line tool for solving sudoku puzzles."
repository = "https://github.com/ObliqueMotion/sudoku-cli"
categories = ["command-line-interface"]
keywords = ["sudoku", "solver", "puzzles", "cli", "fast"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
codegen-units = 1

[dependencies]
clap = "2.33.0"
rayon = "1.2.0"
num_cpus = "1.10.1"
structopt = "0.3.3"
ansi-escapes = "0.1.0"
